# v-mcp-copilot-feedback

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_old.md  docker-compose.yml  example_usage.py  feedback_server.py  mcp_feedback_server.py  mcp_server.py  pyproject.toml  requirements.txt  test_http_server.py  test_https_server.py  test_integration.py  test_mcp_based_server.py  test_mcp_compliance.py  test_mcp_rest_api.py  test_mcp_server.py  test_mcp_tools.py  test_rest_api.py
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
server/: __init__.py  flask_server.py  main.py  mcp_server.py  requirements.txt
server/tools/: __init__.py  ask_question.py  get_reply.py  polling.py
server/user/: __init__.py  answer_form.html  style.css
server/utility/: __init__.py  config.py  context_manager.py  pushover.py
test/: __init__.py  conftest.py  test_mcp_server.py  test_polling.py  test_tools.py  test_user.py  test_utility.py
