[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v-mcp-vibecode-feedback"
version = "2.0.0"
description = "REST API server for agent-human feedback with Pushover notifications"
authors = [
    {name = "Vontainment", email = ""}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
vibecode-feedback-server = "feedback_server:main"

[project.urls]
"Homepage" = "https://github.com/djav1985/v-mcp-vibecode-feedback"
"Bug Tracker" = "https://github.com/djav1985/v-mcp-vibecode-feedback/issues"